--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -2,4 +2,6 @@
 <resources>
     <string name="app_name">RuleThree</string>
     <string name="title">Regla de tres</string>
+    <string name="calculate_btn">Calcular</string>
+    <string name="clean_btn">Limpiar</string>
 </resources>
