--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">RuleThree</string>
     <string name="title">Rule of three</string>
+    <string name="calculate_btn">Calculate</string>
+    <string name="clean_btn">Clean</string>
 </resources>
