--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="clean_btn">Clean</string>
     <string name="result_title">Result</string>
     <string name="save_btn">Save</string>
+    <string name="history_btn">History</string>
 </resources>
